// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`React target > Button fixture 1`] = `
"'use client';

import { useState } from 'react';

export function Button({ label, tone }) {
  const [pressed, setPressed] = useState(false);

  return (
    <button className={pressed ? "pressed" : "idle"} onClick={() => setPressed(true)}>
      {props.label}
    </button>
  );
}
"
`;

exports[`React target > Card fixture 1`] = `
"import type { FC } from 'react';

export function Card({ children, header, footer }) {

  return (
    <div className="card">
      {slots.header && (
        <div className="card-header">
        {header?.()}
      </div>
      )}
      <div className="card-body">
        {children}
      </div>
      {slots.footer && (
        <div className="card-footer">
        {footer?.({ count: 3 })}
      </div>
      )}
    </div>
  );
}
"
`;

exports[`React target > Conditional fixture 1`] = `
"'use client';

import { useState } from 'react';

export function Conditional() {
  const [isVisible, setIsVisible] = useState(false);
  const [count, setCount] = useState(0);

  return (
    <div>
      {isVisible ? (
        <p>
          Content is visible
        </p>
      ) : (
        <p>
          Content is hidden
        </p>
      )}
      {count > 0 && (
        <span>
        Count: 
        {count}
      </span>
      )}
      {isVisible ? (
        <button onClick={() => setIsVisible(false)}>
          Hide
        </button>
      ) : (
        {<button onClick={() => setIsVisible(true)}>Show</button>}
      )}
      <button onClick={() => setCount(count + 1)}>
        Increment
      </button>
    </div>
  );
}
"
`;

exports[`React target > Counter fixture 1`] = `
"'use client';

import { useEffect, useMemo, useState } from 'react';

export function Counter() {
  const [count, setCount] = useState(0);
  const doubled = useMemo(() => count * 2, [count]);
  useEffect(() => {
  console.log("count is", count);
}, [count]);

  return (
    <div>
      <p>
        {count}
      </p>
      <p>
        {doubled}
      </p>
      <button onClick={() => setCount(count + 1)}>
        +1
      </button>
    </div>
  );
}
"
`;

exports[`React target > ForLoop fixture 1`] = `
"'use client';

import { useState } from 'react';

export function ForLoop() {
  const [items, setItems] = useState([]);

  return (
    <ul>
      {items.map((item, index) => (
        <li key={item.id}>
          {index + 1}
          . 
          {item.label}
        </li>
      ))}
    </ul>
  );
}
"
`;

exports[`React target > FormField fixture 1`] = `
"'use client';

import { useEffect, useRef, useState } from 'react';

export function FormField() {
  const [name, setName] = useState("");
  const [country, setCountry] = useState("us");
  const [bio, setBio] = useState("");
  const inputRef = useRef<HTMLInputElement>(null);
  useEffect(() => {
  inputRef.current.focus();
}, []);

  return (
    <form>
      <label>
        
        Name
        
        <input value={setName} type="text" onInput={event => setName(event.target.value)} ref={inputRef} />
      </label>
      <label>
        
        Country
        
        <select value={setCountry} onChange={event => setCountry(event.target.value)}>
          <option value="us">
            United States
          </option>
          <option value="eu">
            European Union
          </option>
          <option value="uk">
            United Kingdom
          </option>
        </select>
      </label>
      <label>
        
        Bio
        
        <textarea value={setBio} rows={4} onInput={event => setBio(event.target.value)} />
      </label>
    </form>
  );
}
"
`;

exports[`React target > Lifecycle fixture 1`] = `
"'use client';

import { useEffect, useMemo, useState } from 'react';

export function Lifecycle() {
  const [count, setCount] = useState(0);
  const [title, setTitle] = useState("Inkline");
  const heading = useMemo(() => \`\${title} — \${count}\`, [title, count]);
  useEffect(() => {
  const id = setInterval(() => setCount(count + 1), 1000);
  return () => clearInterval(id);
}, []);
  useEffect(() => {
  document.title = heading;
}, [heading]);
  useEffect(() => {
  document.title = heading;
}, []);
  useEffect(() => {
    return () => {
      (() => {
  document.title = "Inkline";
})();
    };
  }, []);

  return (
    <div>
      <h1 style={{ fontWeight: count > 10 ? "bold" : "normal" }}>
        {heading}
      </h1>
      <p>
        Count: 
        {count}
      </p>
      <button onClick={() => setCount(0)}>
        Reset
      </button>
      <button onClick={() => setTitle("Updated")}>
        Change Title
      </button>
    </div>
  );
}
"
`;

exports[`React target > List fixture 1`] = `
"'use client';

import { useState } from 'react';

export function List() {
  const [items, setItems] = useState([]);

  return (
    <ul>
      {items.map((item) => (
        <li key={item.id}>
          {item.name}
        </li>
      ))}
    </ul>
  );
}
"
`;

exports[`React target > SwitchTabs fixture 1`] = `
"'use client';

import { useState } from 'react';

export function SwitchTabs() {
  const [activeTab, setActiveTab] = useState("home");

  return (
    <div>
      <nav>
        <button onClick={() => setActiveTab("home")}>
          Home
        </button>
        <button onClick={() => setActiveTab("profile")}>
          Profile
        </button>
        <button onClick={() => setActiveTab("settings")}>
          Settings
        </button>
      </nav>
      {activeTab === "home" ? (
        <section>
          <h2>
            Home
          </h2>
          <p>
            Welcome to the home page.
          </p>
        </section>
      ) : activeTab === "profile" ? (
        <section>
          <h2>
            Profile
          </h2>
          <p>
            Your profile details go here.
          </p>
        </section>
      ) : activeTab === "settings" ? (
        <section>
          <h2>
            Settings
          </h2>
          <p>
            Configure your preferences here.
          </p>
        </section>
      ) : (
        {<p>Unknown tab.</p>}
      )}
    </div>
  );
}
"
`;
